bug 1065965 - Make disabled buttons less visible

--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -446,7 +446,9 @@ article {
             set-smaller-font-size();
 
             &.disabled, &[disabled] {
-                opacity: 0.8;
+                opacity: 0.4;
+                vendorize(box-shadow, none);
+                cursor: not-allowed;
             }
         }
 
